k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #annotations:

  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: abctech.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: myapp
            port: 
              number: 8080
